# OOP_homework

./: 14.1_main.py  README.md  main_14_1.py  main_14_2.py  main_15_1.py  main_16_1.py  main_16_2.py  main_17_1.py  pyproject.toml
src/: index.html  product_and_category.py
src/htmlcov/: index.html
tests/: test_main.py  test_main_14_1.py  test_main_14_2.py  test_main_15_1.py  test_main_16_1.py  test_main_16_2.py  test_main_17_2.py
